@@ -1,0 +1,2 @@
+#!/bin/bash
+_getHeader "$name"
