@@ -3,7 +3,8 @@ https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.7.1
 --------------------------------------------------------
 Hyprland:
 - Add optional network-manager applet support. Can be activated in Settings script System/nm-applet
-- Settings: Show/Hide network module 
+- Show/Hide network module in Settings script
+- New Settings for keyboard (incl. natural_scroll for touchpads)
 
 Version 2.7
 https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.7
